--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="js/script.js">
-	<link rel="stylesheet" href="css/styles.css">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+  <title>Inicio - ACA</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<h1 class="h1_1">H O L A</h1>
 
-</body>
+
+<div class="containerACA">
+  <a href="index.html" class="a-ACA"><img src="img/Logo ACA.png" class="a-ACA" style="width: 135px; height: 60px;position:absolute; left:2%; top: 0px;"></a>
+  <img src="img/tresLineasMenu.png" style="width: 35px; height: 35px; position: absolute; left: 94%;">
+
+  <div class="containerMenuNavegable">
+    <a href="servicios.html" class="menu-item">Servicios</a>
+    <a href="Clientes.html" class="menu-item">Nuestros Clientes</a>
+    <a href="nosotros.html" class="menu-item">All About Us</a>
+  </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="contenedorImg">
+
+</div>
+
+      <footer class="footer">
+        <p style="position: absolute; left: 30px; font-family: Verdana;">ACA© 2023 | Todos los derechos reservados.</p>
+      </footer>
+      
+    </body>
 </html>
+
